--- a/pacman/pacman.csproj
+++ b/pacman/pacman.csproj
@@ -61,6 +61,7 @@
     <Compile Include="StartButton.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="TimeCalculator.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
