--- a/pacman/pacman.csproj
+++ b/pacman/pacman.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Labirint.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
